Improve demo page; confirm browser support; improve bower and npm package descriptions.

--- a/bower.json
+++ b/bower.json
@@ -1,44 +1,46 @@
 {
-  "name": "jquery-date-range-picker",
-  "homepage": "https://github.com/longbill/jquery-date-range-picker",
-  "authors": [
-    "<longbill.cn@gmail.com>"
-  ],
-  "description": "jQuery Date Range Picker is a jQuery plugin that allows user to select a date range.",
-  "main": [
-    "./src/jquery.daterangepicker.js",
-    "./src/daterangepicker.css",
-	"./src/daterangepicker.slate.delta.css"
-  ],
-  "moduleType": [
-    "amd",
-    "globals"
-  ],
-  "keywords": [
-    "jquery",
-    "date",
-    "daterange",
-    "date",
-    "picker",
-    "range"
-  ],
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/longbill/jquery-date-range-picker.git"
-  },
-  "license": "MIT",
-  "ignore": [
-    "**/.*",
-    "node_modules",
-    "bower_components",
-    "test",
-    "tests",
-    "preview.jpg",
-    "CHANGELOG.md",
-    "gulpfile.js"
-  ],
-  "dependencies": {
-    "moment": ">=2.8.1",
-    "jquery": ">=1.4.2"
-  }
+	"name" : "jquery-date-range-picker",
+	"version" : "0.13.0",
+	"authors" : [
+		"<longbill.cn@gmail.com>",
+		"Zhenyu Wu <Adam_5Wu@hotmail.com>"
+	],
+	"homepage" : "https://adam5wu.github.io/jquery-date-range-picker/",
+	"description" : "jQuery Date Range Picker is a jQuery plugin that allows user to select a date range.",
+	"keywords" : [
+		"jquery",
+		"date",
+		"daterange",
+		"date",
+		"picker",
+		"range"
+	],
+	"main" : [
+		"./src/jquery.daterangepicker.js",
+		"./src/daterangepicker.css",
+		"./src/daterangepicker.slate.delta.css"
+	],
+	"moduleType" : [
+		"amd",
+		"globals"
+	],
+	"license" : "MIT",
+	"repository" : {
+		"type" : "git",
+		"url" : "git://github.com/Adam5Wu/jquery-date-range-picker.git"
+	},
+	"ignore" : [
+		"**/.*",
+		"node_modules",
+		"bower_components",
+		"test",
+		"tests",
+		"preview.jpg",
+		"CHANGELOG.md",
+		"gulpfile.js"
+	],
+	"dependencies" : {
+		"moment" : ">=2.8.1",
+		"jquery" : ">=1.4.2"
+	}
 }
