--- a/package.json
+++ b/package.json
@@ -1,46 +1,49 @@
 {
-  "name": "jquery-date-range-picker",
-  "description": "jQuery Date Range Picker is a jQuery plugin that allows user to select a date range.",
-  "version": "0.12.0",
-  "license": "MIT",
-  "keywords": [
-    "jquery",
-    "date",
-    "daterange",
-    "date",
-    "picker",
-    "range"
-  ],
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/longbill/jquery-date-range-picker.git"
-  },
-  "bugs": {
-    "url": "https://github.com/longbill/jquery-date-range-picker/issues"
-  },
-  "homepage": "https://github.com/longbill/jquery-date-range-picker",
-  "maintainers": [],
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "engines": {
-    "node": "0.12.x",
-    "npm": "~3.9.2"
-  },
-  "author": "longbill",
-  "contributors": [],
-  "dependencies": {
-    "moment": ">=2.8.1",
-    "jquery": ">=1.4.2"
-  },
-  "devDependencies": {
-    "del": "^2.2.0",
-    "gulp": "~3.9.1",
-    "gulp-header": "^1.7.1",
-    "gulp-minify-css": "^1.2.4",
-    "gulp-rename": "^1.2.2",
-    "gulp-uglify": "^1.5.3",
-    "gulp-util": "~3.0.7"
-  },
-  "optionalDependencies": {}
+	"name" : "jquery-date-range-picker",
+	"description" : "jQuery Date Range Picker is a jQuery plugin that allows user to select a date range.",
+	"version" : "0.13.0",
+	"license" : "MIT",
+	"keywords" : [
+		"jquery",
+		"date",
+		"picker",
+		"daterange",
+		"datepicker",
+	],
+	"repository" : {
+		"type" : "git",
+		"url" : "git://github.com/Adam5Wu/TimeDropper-Ex.git"
+	},
+	"bugs" : {
+		"url" : "https://github.com/Adam5Wu/jquery-date-range-picker/issues"
+	},
+	"homepage" : "https://adam5wu.github.io/jquery-date-range-picker/",
+	"maintainers" : [
+		"Zhenyu Wu <Adam_5Wu@hotmail.com>"
+	],
+	"scripts" : {
+		"test" : "echo \"Error: no test specified\" && exit 1"
+	},
+	"engines" : {
+		"node" : "0.12.x",
+		"npm" : "~3.9.2"
+	},
+	"author" : "longbill",
+	"contributors" : [
+		"Zhenyu Wu <Adam_5Wu@hotmail.com>"
+	],
+	"dependencies" : {
+		"moment" : ">=2.8.1",
+		"jquery" : ">=1.4.2"
+	},
+	"devDependencies" : {
+		"del" : "^2.2.0",
+		"gulp" : "~3.9.1",
+		"gulp-header" : "^1.7.1",
+		"gulp-minify-css" : "^1.2.4",
+		"gulp-rename" : "^1.2.2",
+		"gulp-uglify" : "^1.5.3",
+		"gulp-util" : "~3.0.7"
+	},
+	"optionalDependencies" : {}
 }
