Update minified sources

--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
 	"name" : "jquery-date-range-picker",
-	"version" : "0.13.0",
+	"version" : "0.13.0-AdamWu",
 	"authors" : [
 		"<longbill.cn@gmail.com>",
 		"Zhenyu Wu <Adam_5Wu@hotmail.com>"
