--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name" : "jquery-date-range-picker",
 	"description" : "jQuery Date Range Picker is a jQuery plugin that allows user to select a date range.",
-	"version" : "0.13.2-AdamWu",
+	"version" : "0.13.3-AdamWu",
 	"license" : "MIT",
 	"keywords" : [
 		"jquery",
@@ -33,8 +33,8 @@
 		"Zhenyu Wu <Adam_5Wu@hotmail.com>"
 	],
 	"dependencies" : {
-		"moment" : ">=2.8.1",
-		"jquery" : ">=1.4.2"
+		"jquery" : ">=1.4.2",
+		"moment" : ">=2.8.1"
 	},
 	"devDependencies" : {
 		"del" : "^2.2.0",
